Fix weird spacing

--- a/styles.css
+++ b/styles.css
@@ -186,7 +186,7 @@ h4{
 }
 
 h5{
-  font-family: 'DM Mono';
+  font-family: 'Inter';
   font-size: 0;
   line-height: 0;
   padding-bottom: 1px; 
@@ -194,7 +194,7 @@ h5{
 }
 
 h6{
-  font-family: 'DM Mono';
+  font-family: 'Inter';
   font-size: 0;
   line-height: 0;
 }
